fix p4 compiling errors

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -66,6 +66,8 @@ dependencies:
   esp_jpeg_simd:
     git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
     path: components/esp_jpeg_simd
+    rules:
+      - if: target not in [esp32p4]
 
   ## Required IDF version
   idf:
