fix: adjust dependency rules for some components

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -62,12 +62,14 @@ dependencies:
   sscma_client:
     git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
     path: components/sscma_client
+    rules:
+      - if: target not in [esp32p4, esp32c3]
   
   esp_jpeg_simd:
     git: https://github.com/Seeed-Studio/SenseCAP-Watcher-Firmware.git
     path: components/esp_jpeg_simd
     rules:
-      - if: target not in [esp32p4]
+      - if: target not in [esp32p4, esp32c3]
 
   ## Required IDF version
   idf:
