--- a/main/boards/jiuchuan-s3/config.json
+++ b/main/boards/jiuchuan-s3/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "jiuchuang-s3",
+            "name": "jiuchuan-s3",
             "sdkconfig_append": []
         }
     ]
