Add Guition Boards

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -191,6 +191,10 @@ elseif(CONFIG_BOARD_TYPE_OTTO_ROBOT)
     set(BOARD_TYPE "otto-robot")
 elseif(CONFIG_BOARD_TYPE_ELECTRON_BOT)
     set(BOARD_TYPE "electron-bot")
+elseif(CONFIG_BOARD_TYPE_GUITION_JC1060P470)
+    set(BOARD_TYPE "Guition-jc1060p470")
+elseif(CONFIG_BOARD_TYPE_GUITION_JC8012P4A1)
+    set(BOARD_TYPE "Guition-jc8012p4a1")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
