Add JC1060P4A1 and JC1060P470 board support; update CMakeLists and Kconfig

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_VER "1.7.4")
+set(EXTRA_COMPONENT_DIRS
+    ../common_components
+    )
+
 
 # Add this line to disable the specific warning
 add_compile_options(-Wno-missing-field-initializers)
