--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -177,6 +177,10 @@ elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC_144)
     set(BOARD_TYPE "esp32-cgc-144")  
+elseif(CONFIG_BOARD_TYPE_JC1060P470)
+    set(BOARD_TYPE "jc1060p470")
+elseif(CONFIG_BOARD_TYPE_JC1060P4A1)
+    set(BOARD_TYPE "jc1060p4a1")
 elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board)
     set(BOARD_TYPE "esp-s3-lcd-ev-board")
 elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_WIFI)
