--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -191,6 +191,8 @@ elseif(CONFIG_BOARD_TYPE_OTTO_ROBOT)
     set(BOARD_TYPE "otto-robot")
 elseif(CONFIG_BOARD_TYPE_ELECTRON_BOT)
     set(BOARD_TYPE "electron-bot")
+elseif(CONFIG_BOARD_TYPE_BIAO_BOX_ESP32S3)
+    set(BOARD_TYPE "biao-box-esp32s3")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
