--- a/.config/shaolu_config.json
+++ b/.config/shaolu_config.json
@@ -1,7 +1,7 @@
 {
     "client_type": "esp32s3",
-    "device_name": "",
+    "device_name": "小乔设备-9228",
     "device_version": "1.0.0",
     "idf_path": "C:\\Users\\1\\esp\\v5.4.1\\esp-idf",
-    "last_port": "COM1"
+    "last_port": "COM77"
 }
