--- a/main/boards/esp32-s3-touch-lcd-3.5b/config.json
+++ b/main/boards/esp32-s3-touch-lcd-3.5b/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32-s3-touch-lcd-3.5",
+            "name": "esp32-s3-touch-lcd-3.5b",
             "sdkconfig_append": [
                 "CONFIG_USE_WECHAT_MESSAGE_STYLE=y"
             ]
