--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -201,6 +201,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_CAM)
     set(BOARD_TYPE "bread-compact-wifi-s3cam")
 elseif(CONFIG_BOARD_TYPE_JIUCHUAN )
     set(BOARD_TYPE "jiuchuan-s3")
+elseif(CONFIG_BOARD_TYPE_VIEWE_SMARTRING)
+    set(BOARD_TYPE "viewe-smartring-s3-amoled-1.75")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
