添加微雪电子 esp32-c6-touch-amoled-1.43 和 esp32-c6-touch-amoled-1.43-b的支持

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -119,6 +119,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_3_5B)
     set(BOARD_TYPE "waveshare-s3-touch-lcd-3.5b")
 elseif(CONFIG_BOARD_TYPE_ESP32C6_LCD_1_69)
     set(BOARD_TYPE "waveshare-c6-lcd-1.69")
+elseif(CONFIG_BOARD_TYPE_ESP32C6_Touch_AMOLED_1_43)
+    set(BOARD_TYPE "waveshare-c6-touch-amoled-1.43")
 elseif(CONFIG_BOARD_TYPE_ESP32P4_NANO)
     set(BOARD_TYPE "waveshare-p4-nano")
 elseif(CONFIG_BOARD_TYPE_ESP32P4_WIFI6_Touch_LCD_4B)
