feat: Add MCP News system
Add RSS news integration with 3 MCP tools:
- search_news: Search articles by keywords
- get_headlines: Get latest headlines from multiple news sources
- get_trending_news: Get trending articles

Features:
- RSS-based implementation (no API keys required)
- Multi-source news aggregation
- Automatic retry mechanisms for failed requests
- Support for international news sources

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -17,6 +17,8 @@ set(SOURCES "audio_codecs/audio_codec.cc"
             "iot/thing.cc"
             "iot/thing_manager.cc"
             "mcp_server.cc"
+            "mcp_news_tools.cc"
+            "news_providers.cc"
             "system_info.cc"
             "application.cc"
             "ota.cc"
