修改板名:labplus-Ledong-v2 -> labplus-ledong-v2 	modified:   main/CMakeLists.txt 	modified:   main/Kconfig.projbuild 	renamed:    main/boards/labplus-Ledong-v2/README.md -> main/boards/labplus-ledong-v2/README.md 	renamed:    main/boards/labplus-Ledong-v2/config.h -> main/boards/labplus-ledong-v2/config.h 	renamed:    main/boards/labplus-Ledong-v2/config.json -> main/boards/labplus-ledong-v2/config.json 	renamed:    main/boards/labplus-Ledong-v2/labplus_Ledong_v2.cc -> main/boards/labplus-ledong-v2/labplus_ledong_v2.cc

--- a/main/boards/labplus-ledong-v2/config.json
+++ b/main/boards/labplus-ledong-v2/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "labplus-Ledong-v2",
+            "name": "labplus-ledong-v2",
             "sdkconfig_append": []
         }
     ]
