--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -206,7 +206,7 @@ elseif(CONFIG_BOARD_TYPE_JIUCHUAN )
 elseif(CONFIG_BOARD_TYPE_LABPLUS_MPYTHON_V3)
     set(BOARD_TYPE "labplus-mpython-v3") 
 elseif(CONFIG_BOARD_TYPE_LABPLUS_LEDONG_V2)
-    set(BOARD_TYPE "labplus-Ledong-v2") 
+    set(BOARD_TYPE "labplus-ledong-v2") 
 elseif(CONFIG_BOARD_TYPE_SURFER_C3_1_14TFT)
     set(BOARD_TYPE "surfer-c3-1.14tft")
 endif()
