--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -13,7 +13,9 @@ dependencies:
     git: "https://github.com/Chris-websketch/78__esp-wifi-connect.git"
   78/esp-opus-encoder: "~2.3.0"
   78/esp-ml307: "~1.8.1"
-  78/xiaozhi-fonts: "~1.3.2"
+  # 78/xiaozhi-fonts: "~1.3.2"
+  xiaozhi-fonts:
+    path: "../xiaozhi-fonts"
   espressif/led_strip: "^2.4.1"
   espressif/esp_codec_dev: "~1.3.2"
   espressif/esp-sr: "^2.0.3"
