add labplus-Ledong-v2 and labplus-mpython-v3 board: (#897)
* add labplus-Ledong-v2 and labplus-mpython-v3 board:
	modified:   main/CMakeLists.txt
	modified:   main/Kconfig.projbuild
	new file:   main/boards/labplus-Ledong-v2/README.md
	new file:   main/boards/labplus-Ledong-v2/config.h
	new file:   main/boards/labplus-Ledong-v2/config.json
	new file:   main/boards/labplus-Ledong-v2/labplus_Ledong_v2.cc
	new file:   main/boards/labplus-mpython-v3/README.md
	new file:   main/boards/labplus-mpython-v3/config.h
	new file:   main/boards/labplus-mpython-v3/config.json
	new file:   main/boards/labplus-mpython-v3/mpython_pro.cc

* Changes to be committed:
	new file:   .clangd

* 修改板名:labplus-Ledong-v2 -> labplus-ledong-v2
	modified:   main/CMakeLists.txt
	modified:   main/Kconfig.projbuild
	renamed:    main/boards/labplus-Ledong-v2/README.md -> main/boards/labplus-ledong-v2/README.md
	renamed:    main/boards/labplus-Ledong-v2/config.h -> main/boards/labplus-ledong-v2/config.h
	renamed:    main/boards/labplus-Ledong-v2/config.json -> main/boards/labplus-ledong-v2/config.json
	renamed:    main/boards/labplus-Ledong-v2/labplus_Ledong_v2.cc -> main/boards/labplus-ledong-v2/labplus_ledong_v2.cc

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -203,6 +203,10 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_CAM)
     set(BOARD_TYPE "bread-compact-wifi-s3cam")
 elseif(CONFIG_BOARD_TYPE_JIUCHUAN )
     set(BOARD_TYPE "jiuchuan-s3")
+elseif(CONFIG_BOARD_TYPE_LABPLUS_MPYTHON_V3)
+    set(BOARD_TYPE "labplus-mpython-v3") 
+elseif(CONFIG_BOARD_TYPE_LABPLUS_LEDONG_V2)
+    set(BOARD_TYPE "labplus-ledong-v2") 
 elseif(CONFIG_BOARD_TYPE_SURFER_C3_1_14TFT)
     set(BOARD_TYPE "surfer-c3-1.14tft")
 endif()
