--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -230,6 +230,8 @@ if(CONFIG_USE_AFE_WAKE_WORD)
     list(APPEND SOURCES "audio_processing/afe_wake_word.cc")
 elseif(CONFIG_USE_ESP_WAKE_WORD)
     list(APPEND SOURCES "audio_processing/esp_wake_word.cc")
+elseif(CONFIG_USE_CUSTOM_WAKE_WORD)
+    list(APPEND SOURCES "audio_processing/custom_wake_word.cc")
 else()
     list(APPEND SOURCES "audio_processing/no_wake_word.cc")
 endif()
