Fix the abnormal areas

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -107,7 +107,7 @@ elseif(CONFIG_BOARD_TYPE_ECHOEAR)
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_8)
     set(BOARD_TYPE "esp32-s3-touch-amoled-1.8")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_2_06)
-    set(BOARD_TYPE "esp32-s3-touch-amoled-2.06")
+    set(BOARD_TYPE "waveshare-s3-touch-amoled-2.06")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
     set(BOARD_TYPE "waveshare-s3-touch-amoled-1.75")
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85C)
