feat(board): 添加 SG90 舵机语音控制板支持
- 在 CMakeLists.txt 和 Kconfig.projbuild 中添加 SG90 舵机语音控制板的配置选项
- 添加了完整的 SG90 舵机控制板代码实现，包括舵机控制、语音指令处理等功能
- 提供了舵机角度控制、旋转、扫描、停止等 MCP 工具接口
- 包含详细的硬件接线说明和编译烧录指南

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -214,6 +214,8 @@ elseif(CONFIG_BOARD_TYPE_LABPLUS_LEDONG_V2)
     set(BOARD_TYPE "labplus-ledong-v2") 
 elseif(CONFIG_BOARD_TYPE_SURFER_C3_1_14TFT)
     set(BOARD_TYPE "surfer-c3-1.14tft")
+elseif(CONFIG_BOARD_TYPE_SG90_SERVO_VOICE)
+    set(BOARD_TYPE "sg90-servo-voice")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
