feat: 添加 dehonghao-s3-lcd-1.3 开发板支持
- 新增 dehonghao-s3-lcd-1.3 开发板配置文件
- 添加开发板实现代码
- 更新 CMakeLists.txt 包含新开发板
- 添加开发板说明文档

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -216,6 +216,8 @@ elseif(CONFIG_BOARD_TYPE_LABPLUS_LEDONG_V2)
     set(BOARD_TYPE "labplus-ledong-v2") 
 elseif(CONFIG_BOARD_TYPE_SURFER_C3_1_14TFT)
     set(BOARD_TYPE "surfer-c3-1.14tft")
+elseif(CONFIG_BOARD_TYPE_DEHONGHAO_S3_LCD_1_3)
+    set(BOARD_TYPE "dehonghao-s3-lcd-1.3")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
