feat: add emote_gfx UI for EchoEar

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -336,3 +336,16 @@ spiffs_create_partition_assets(
     MMAP_FILE_SUPPORT_FORMAT ".aaf"
 )
 endif()
+
+if(CONFIG_BOARD_TYPE_ECHOEAR)
+
+set(SPIFFS_DIR "./boards/${BOARD_TYPE}/emoji")
+
+spiffs_create_partition_assets(
+    assets_A
+    ${SPIFFS_DIR}
+    FLASH_IN_PROJECT
+    MMAP_FILE_SUPPORT_FORMAT ".aaf, ttf, bin"
+    IMPORT_INC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}
+)
+endif()
