--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -31,6 +31,7 @@ dependencies:
   esp_lvgl_port: ~2.6.0
   espressif/esp_io_expander_tca95xx_16bit: ^2.0.0
   espressif2022/image_player: ==1.1.0~1
+  espressif2022/esp_emote_gfx: ^1.0.0~1
   espressif/adc_mic: ^0.2.0
   espressif/esp_mmap_assets: '>=1.2'
   txp666/otto-emoji-gif-component: ~1.0.2
