--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -42,6 +42,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32)
     set(BOARD_TYPE "bread-compact-esp32")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32_LCD)
     set(BOARD_TYPE "bread-compact-esp32-lcd")
+elseif(CONFIG_BOARD_TYPE_WIFIDUINO32_S3)
+    set(BOARD_TYPE "wifiduino32_s3")
 elseif(CONFIG_BOARD_TYPE_DF_K10)
     set(BOARD_TYPE "df-k10")
 elseif(CONFIG_BOARD_TYPE_DF_S3_AI_CAM)
