feat: 适配 ESP-S3-EV-Board-2 开发板

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -192,6 +192,8 @@ elseif(CONFIG_BOARD_TYPE_ESP32_CGC_144)
     set(BOARD_TYPE "esp32-cgc-144")  
 elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board)
     set(BOARD_TYPE "esp-s3-lcd-ev-board")
+elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board_2)
+    set(BOARD_TYPE "esp-s3-lcd-ev-board-2")
 elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_WIFI)
     set(BOARD_TYPE "zhengchen-1.54tft-wifi")
 elseif(CONFIG_BOARD_TYPE_MINSI_K08_DUAL)
