更新项目版本至2.0.0，标识测试固件不参与正常升级，同时保持xiaozhi-fonts子项目的引用状态。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@
 # The following five lines of boilerplate have to be in your project's
 # CMakeLists in this exact order for cmake to work correctly
 cmake_minimum_required(VERSION 3.16)
-
-set(PROJECT_VER "1.1.0")
+#测试固件不参与正常升级，所以版本号设置为2.0.0
+set(PROJECT_VER "2.0.0")
 
 # Add this line to disable the specific warning
 add_compile_options(-Wno-missing-field-initializers)
