增加星智系列相关配置项（包括4g和wifi版本的无屏s3、无屏c3、2.0音箱以及铝合金版本）

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -178,6 +178,20 @@ elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_WIFI)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-wifi")
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_1_54TFT_ML307)
     set(BOARD_TYPE "xingzhi-cube-1.54tft-ml307")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_METAL_1_54)
+    set(BOARD_TYPE "xingzhi-metal-1.54")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_2_0TFT_WIFI)
+    set(BOARD_TYPE "xingzhi-cube-2.0tft-wifi")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_2_0TFT_4G)
+    set(BOARD_TYPE "xingzhi-cube-2.0tft-4g")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_S3_WIFI)
+    set(BOARD_TYPE "xingzhi-s3-wifi")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_S3_4G)
+    set(BOARD_TYPE "xingzhi-s3-4g")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_C3_WIFI)
+    set(BOARD_TYPE "xingzhi-c3-wifi")
+elseif(CONFIG_BOARD_TYPE_XINGZHI_C3_4G)
+    set(BOARD_TYPE "xingzhi-c3-4g")
 elseif(CONFIG_BOARD_TYPE_SENSECAP_WATCHER)
     set(BOARD_TYPE "sensecap-watcher")
 elseif(CONFIG_BOARD_TYPE_DOIT_S3_AIBOX)
