振动马达&UI界面切换
·实现了十种振动马达输出模式，目前是GPIO直连版本，后续改为I2C连接版本
·新增UI界面切换，在menuconfig中可选默认UI与动画UI

--- a/main/boards/ALichuangTest/config.json
+++ b/main/boards/ALichuangTest/config.json
@@ -6,6 +6,18 @@
             "sdkconfig_append": [
                 "CONFIG_USE_DEVICE_AEC=y"
             ]
+        },
+        {
+            "name": "xiaozhi-default-UI",
+            "sdkconfig_append": [
+                "CONFIG_XIAOZHI_DEFAULT_UI=y"
+            ]
+        },
+        {
+            "name": "lingxi-anima-UI",
+            "sdkconfig_append": [
+                "CONFIG_LINGXI_ANIMA_UI=y"
+            ]
         }
     ]
 }
