feat: 添加'Hi,小雾'唤醒词并修改电池映射表
- 添加新的唤醒词'Hi,小雾'
- 更新电池电压与电量映射表，提高电量估算准确性

--- a/main/boards/fogseek-esp32s3-audio/config.json
+++ b/main/boards/fogseek-esp32s3-audio/config.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "name": "fogseek-esp32s3-audio",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y",
+                "CONFIG_OCV_SOC_MODEL_2=y"
+            ]
         }
     ]
 }
