--- a/main/boards/fogseek-moodlight/config.json
+++ b/main/boards/fogseek-moodlight/config.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "name": "fogseek-moodlight",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y",
+                "CONFIG_OCV_SOC_MODEL_2=y"
+            ]
         }
     ]
 }
