添加 AI-VOX 3.0 开发板

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -37,12 +37,16 @@ list(APPEND SOURCES ${BOARD_COMMON_SOURCES})
 list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/common)
 
 # 根据 BOARD_TYPE 配置添加对应的板级文件
-if(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox)
+if(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_V3)
+    set(BOARD_TYPE "nulllab-ai-vox-v3")
+elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox)
     set(BOARD_TYPE "nulllab-ai-vox")
 elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_Emoji)
     set(BOARD_TYPE "nulllab-ai-vox-emoji")
 elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_Eyes)
     set(BOARD_TYPE "nulllab-ai-vox-eyes")
+elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_Otto)
+    set(BOARD_TYPE "nulllab-ai-vox-otto")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
     set(BOARD_TYPE "bread-compact-wifi")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307)
@@ -180,7 +184,7 @@ elseif(CONFIG_BOARD_TYPE_GENJUTECH_S3_1_54TFT)
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC)
     set(BOARD_TYPE "esp32-cgc")
 elseif(CONFIG_BOARD_TYPE_ESP32_CGC_144)
-    set(BOARD_TYPE "esp32-cgc-144")  
+    set(BOARD_TYPE "esp32-cgc-144")
 elseif(CONFIG_BOARD_TYPE_ESP_S3_LCD_EV_Board)
     set(BOARD_TYPE "esp-s3-lcd-ev-board")
 elseif(CONFIG_BOARD_TYPE_ZHENGCHEN_1_54TFT_WIFI)
@@ -294,7 +298,7 @@ list(APPEND FILES_TO_DOWNLOAD "panic_return.aaf" "wake.aaf")
 foreach(FILENAME IN LISTS FILES_TO_DOWNLOAD)
     set(REMOTE_FILE "${URL}/${FILENAME}")
     set(LOCAL_FILE "${SPIFFS_DIR}/${FILENAME}")
-    
+
     # 检查本地文件是否存在
     if(EXISTS ${LOCAL_FILE})
         message(STATUS "File ${FILENAME} already exists, skipping download")
