--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -160,6 +160,11 @@ elseif(CONFIG_BOARD_TYPE_LICHUANG_C3_DEV)
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
     set(LVGL_ICON_FONT ${FONT_AWESOME_20_4})
     set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_S_PUHUI_COMMON_20_4_EMOJI_32})
+elseif(CONFIG_BOARD_TYPE_LICHUANG_ESP32S3R8N8)
+    set(BOARD_TYPE "lichuang-esp32s3r8n8")
+    set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_14_1})
+    set(LVGL_ICON_FONT ${FONT_AWESOME_14_1})
+    set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_14_1})
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_2P4)
     set(BOARD_TYPE "magiclick-2p4")
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_16_4})
