--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCES "audio/audio_codec.cc"
             "display/display.cc"
             "display/lcd_display.cc"
             "display/oled_display.cc"
+            "display/esplog_display.cc"
             "display/emoji_collection.cc"
             "protocols/protocol.cc"
             "protocols/mqtt_protocol.cc"
