--- a/main/boards/esp32s3-smart-speaker/config.json
+++ b/main/boards/esp32s3-smart-speaker/config.json
@@ -4,13 +4,11 @@
         {
             "name": "esp32s3-smart-speaker",
             "sdkconfig_append": [
-                "CONFIG_ESPTOOLPY_FLASHSIZE_16MB=y",
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/16m.csv\"",
-                "CONFIG_LVGL_USE_LOG=y",
-                "CONFIG_LVGL_LOG_LEVEL_INFO=y",
-                "CONFIG_ESP_CONSOLE_USB_SERIAL_JTAG=y",
-                "CONFIG_ESPTOOLPY_FLASHMODE_QIO=y",
-                "CONFIG_ESPTOOLPY_FLASHFREQ_80M=y"
+                "CONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=n",
+                "CONFIG_LWIP_IPV6=n",
+                "CONFIG_USE_ESP_WAKE_WORD=y",
+                "CONFIG_USE_AUDIO_DEBUGGER=y",
+                "CONFIG_AUDIO_DEBUG_UDP_SERVER=\"192.168.122.143:8000\""
             ]
         }
     ]
