添加小智云聊-S3并修改8388支持AEC

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -508,6 +508,11 @@ elseif(CONFIG_BOARD_TYPE_SURFER_C3_1_14TFT)
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
     set(LVGL_ICON_FONT ${FONT_AWESOME_20_4})
     set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_S_PUHUI_COMMON_20_4_EMOJI_32})
+elseif(CONFIG_BOARD_TYPE_YUNLIAO_S3)
+    set(BOARD_TYPE "yunliao-s3")
+    set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
+    set(LVGL_ICON_FONT ${FONT_AWESOME_20_4})
+    set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_20_4_EMOJI_64})
 endif()
 
 file(GLOB BOARD_SOURCES
