--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -339,6 +339,9 @@ elseif(CONFIG_BOARD_TYPE_LILYGO_T_DISPLAY_S3_PRO_MVSRLORA)
     set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_20_4_EMOJI_64})
 elseif(CONFIG_BOARD_TYPE_MOVECALL_MOJI_ESP32S3)
     set(BOARD_TYPE "movecall-moji-esp32s3")
+    set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
+    set(LVGL_ICON_FONT ${FONT_AWESOME_20_4})
+    set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_20_4_EMOJI_64})
 elseif(CONFIG_BOARD_TYPE_MOVECALL_CUICAN_ESP32S3)
     set(BOARD_TYPE "movecall-cuican-esp32s3")
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
@@ -346,8 +349,14 @@ elseif(CONFIG_BOARD_TYPE_MOVECALL_CUICAN_ESP32S3)
     set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_20_4_EMOJI_64})
 elseif(CONFIG_BOARD_TYPE_MOLUNSMARTHOME_ESP32S3)
     set(BOARD_TYPE "molunsmarthome-esp32s3")
+    set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
+    set(LVGL_ICON_FONT ${FONT_AWESOME_20_4})
+    set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_20_4_EMOJI_64})
 elseif(CONFIG_BOARD_TYPE_MOLUNSMARTHOME_ESP32)
     set(BOARD_TYPE "molunsmarthome-esp32") 
+    set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_14_1})
+    set(LVGL_ICON_FONT ${FONT_AWESOME_14_1})
+    set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_S_PUHUI_COMMON_14_1})   
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3)
     set(BOARD_TYPE "atk-dnesp32s3")
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
