New Waveshare ESP32-S3-Touch-LCD-4B third party board, 86 box form.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -257,6 +257,11 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_2_06)
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_30_4})
     set(LVGL_ICON_FONT ${FONT_AWESOME_30_4})
     set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_30_4_EMOJI_64})
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_4B)
+    set(BOARD_TYPE "waveshare-s3-touch-lcd-4b")
+    set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_30_4})
+    set(LVGL_ICON_FONT ${FONT_AWESOME_30_4})
+    set(DEFAULT_ASSETS ${ASSETS_XIAOZHI_PUHUI_COMMON_30_4_EMOJI_64})
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
     set(BOARD_TYPE "waveshare-s3-touch-amoled-1.75")
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_30_4})
