--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SOURCES "audio/audio_codec.cc"
             "protocols/protocol.cc"
             "protocols/mqtt_protocol.cc"
             "protocols/websocket_protocol.cc"
+            "protocols/sleep_music_protocol.cc"
             "mcp_server.cc"
             "system_info.cc"
             "application.cc"
