set gfx core to cpu1

--- a/main/boards/echoear/config.json
+++ b/main/boards/echoear/config.json
@@ -4,8 +4,7 @@
         {
             "name": "echoear",
             "sdkconfig_append": [
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v1/16m_echoear.csv\"",
-                "CONFIG_USE_DEVICE_AEC=y"
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v1/16m_echoear.csv\""
             ]
         }
     ]
